--- a/projeto/Analise Exploratória de Dados.ipynb
+++ b/projeto/Analise Exploratória de Dados.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff921871",
+   "id": "6cd9be7b",
    "metadata": {},
    "source": [
     "### Introdução\n",
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "215bd569",
+   "id": "72ef4712",
    "metadata": {},
    "source": [
     "Existe 10692 dados, levando em conta todos os alugueis de todas as cidades, primeiro será feito o recorte que se quer análisar"
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6307ab43",
+   "id": "1e725819",
    "metadata": {},
    "source": [
     "### Filtrar os dados de São Paulo que vão até 2000R$"
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "7d863eb1",
+   "id": "6a3f370e",
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2852399d",
+   "id": "0f33a427",
    "metadata": {},
    "source": [
     "Quantidade de dados depois do filtro"
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "800a6e46",
+   "id": "efad4a83",
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24781148",
+   "id": "0a5809e0",
    "metadata": {},
    "source": [
     "* Existem 807 observações que estão dentro do padrão especificado.\n",
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "22a92306",
+   "id": "909e71ab",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fdee894",
+   "id": "472e9658",
    "metadata": {},
    "source": [
     "Os valores foram alterados para float, mas agora foi obtido valores nulos na coluna 'floor' (andar).\n",
@@ -771,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "81324d15",
+   "id": "d10fd5fa",
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92a7615c",
+   "id": "5869d8e8",
    "metadata": {},
    "source": [
     "A coluna 'floor' não tem mais dados nulos"
@@ -972,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "33c8e1f3",
+   "id": "66427673",
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43758871",
+   "id": "860505f3",
    "metadata": {},
    "source": [
     "#### Grafico 1\n",
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4886b79c",
+   "id": "110ccf07",
    "metadata": {},
    "source": [
     "#### Imóveis mais caros tendem a ter um maior aceite de animais"
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d9147dd",
+   "id": "14f0a2e8",
    "metadata": {},
    "source": []
   },
@@ -1245,8 +1245,16 @@
    "id": "f06625c2",
    "metadata": {},
    "source": [
-    "É possivel ver uma tendência sim, que ao aumentar a área do imóvel, a permissão para animais "
+    "É possivel ver uma tendência sim, que ao aumentar a área do imóvel, aumenta também a permissão para animais."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b77dac5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
